Switched to websocket (using Weberknecht) as connection mechanism